--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     {% block title %}
         <title>Weights</title>
     {% endblock title %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <header>
